--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "version": "1.0.1",
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^9.1.2",
+        "@fastify/static": "^8.0.2",
         "app-root-path": "^3.1.0",
         "axios": "^1.7.7",
         "env-to-config": "^1.3.2",
-        "fastify": "^4.19.0",
+        "fastify": "^5.0.0",
         "nodemailer": "^6.9.13",
         "pm2": "^5.3.0"
     },
